--- a/front/style3.css
+++ b/front/style3.css
@@ -2,19 +2,23 @@ body{
     padding: 0;
     margin: 0;
     height:100%;
-    width: 100vw;
+    width: 96%;
     font-family: Arial, Helvetica, sans-serif;
 
     background-color:white;
 }
 
-h1{
-    width: 70%;
-    float:none;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    margin-left: 20%;;
-    color:darkred;
-}
+h1 {
+    width: 100%;
+    display: flex;
+    padding-left: 20px;
+    padding-right: 10px;
+    justify-content: center;
+    float: none;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    color: darkred;
+  }
 
 h3{
     position:absolute;
@@ -41,12 +45,11 @@ align-items: center;
 
 nav {
     display: flex;
-    width: 60%;
+    width: 100%;
     justify-content: end;
     border-bottom: 3px solid rgb(108, 9, 9);
     margin-bottom: 20px;
-    
-}
+  }
 
 nav > ul {
     padding: 0;
@@ -146,7 +149,6 @@ nav > ul> li> a {
 .container {
     position: relative;
     text-align: center;
-    padding-top: 80px;
 }
 
 button {
@@ -156,7 +158,6 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-left: 80%;
 }
 
 body.dark-mode {
