--- a/front/style5.css
+++ b/front/style5.css
@@ -2,18 +2,19 @@ body{
     padding: 0;
     margin: 0;
     height:100%;
-    width: 100vw;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 
     background-color:white;
 }
 
 h1{
-    width: 70%;
     float:none;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    margin-left: 20%;;
     color:darkred;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 h3{
@@ -35,12 +36,11 @@ align-items: center;
 
 nav {
     display: flex;
-    width: 60%;
+    width: 100%;
     justify-content: end;
     border-bottom: 3px solid rgb(108, 9, 9);
     margin-bottom: 20px;
-    
-}
+  }
 
 nav > ul {
     padding: 0;
@@ -108,7 +108,6 @@ nav > ul> li> a {
 
 .container {
     text-align: center;
-    padding-top: 80px;
 }
 
 button {
@@ -118,7 +117,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-left: 80%;
+    margin-bottom: 10px;
 }
 
 body.dark-mode {
